--- a/seeds/playground/assets/index.html
+++ b/seeds/playground/assets/index.html
@@ -2,16 +2,27 @@
 <script type="importmap">
 {
   "imports": {
-    "zod": "/zod/index.mjs"
+    "zod": "/zod/index.mjs",
+    "@polymath-ai/ai": "/openai/index.js",
+    "codemirror": "/codemirror/index.js",
+    "@codemirror/lang-markdown": "/codemirror-markdown/index.js",
+    "@codemirror/state": "/codemirror-state/index.js",
+    "@codemirror/view": "/codemirror-view/index.js",
+    "@codemirror/language": "/codemirror-language/index.js"
   }
 }
 </script>
-<script type="module" src="/scripts/prompt.js"></script>
-<script type="module" src="/scripts/input.js"></script>
+<script type="module" src="/scripts/everything.js"></script>
 <script type="module">
-  import { openai } from '/openai/index.js';
-  console.log(openai);
+  document.querySelector('button').addEventListener('click', async () => {
+    const prompt = document.querySelector('llm-prompt');
+    const response = await prompt.run({
+      question: "Will it rain tomorrow?"
+    });
+    console.log(response);
+  });
 </script>
+<button>RUN</button>
 <llm-prompt>Analyze the question being asked and, instead of answering the question, write an asynchronous JavaScript function named `getAnswer` that will make progress towards answering the question. It does not need to try to answer the question completely. As long as progress was made, the function can exit.
 
   The function can make progress in three ways:
