Wire up inputs.

--- a/seeds/playground/assets/index.html
+++ b/seeds/playground/assets/index.html
@@ -15,7 +15,8 @@
   }
 
   ai-playground {
-    height: 600px;
+    height: 100vh;
+    padding: 10px;
   }
 </style>
 <script type="module" src="/scripts/everything.js"></script>
